--- a/app.json
+++ b/app.json
@@ -26,6 +26,13 @@
 			},
 			"class": "thermostat",
 			"capabilities": [ "target_temperature", "measure_temperature" ],
+			"capabilitiesOptions": {
+				"target_temperature": {
+					"min": 5,
+					"max": 30,
+					"step": 0.5
+				}
+			},
 			"images": {
 				"large": "drivers/thermostat/assets/images/large.png",
 				"small": "drivers/thermostat/assets/images/small.png"
@@ -36,13 +43,13 @@
 				},
 				{
 					"id": "list_devices",
-					"template": "list_devices",
+					"template": "list_devices_singular",
 					"navigation": {
-						"next": "add_stations"
+						"next": "add_devices"
 					}
 				},
 				{
-					"id": "add_stations",
+					"id": "add_devices",
 					"template": "add_devices"
 				}
 			]
