--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
 	"id": "nl.thermosmart",
-	"version": "1.0.6",
+	"version": "1.0.7",
 	"compatibility": "*",
 	"name": {
 		"en": "ThermoSmart"
@@ -30,8 +30,16 @@
 				"target_temperature": {
 					"min": 5,
 					"max": 30,
-					"step": 0.5
+					"step": 0.2
 				}
+			},
+			"mobile": {
+				"components": [
+					{
+						"id": "slider",
+						"capabilities": [ "target_temperature" ]
+					}
+				]
 			},
 			"images": {
 				"large": "drivers/thermostat/assets/images/large.png",
@@ -56,6 +64,22 @@
 		}
 	],
 	"flow": {
+		"conditions": [
+			{
+				"id": "is_paused",
+				"title": {
+					"en": "Is !{{|not}} paused",
+					"nl": "Is !{{|niet}} gepauzeerd"
+				},
+				"args": [
+					{
+						"name": "device",
+						"type": "device",
+						"filter": "driver_id=thermostat"
+					}
+				]
+			}
+		],
 		"actions": [
 			{
 				"id": "set_pause_true",
