--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
 	"id": "nl.thermosmart",
-	"version": "1.0.8",
-	"compatibility": "*",
+	"version": "2.0.0",
+	"sdk": 2,
+	"compatibility": ">=1.5.0",
 	"name": {
 		"en": "ThermoSmart"
 	},
@@ -11,7 +12,7 @@
 	},
 	"author": {
 		"name": "Athom B.V.",
-		"website": "info@athom.com"
+		"email": "info@athom.com"
 	},
 	"category": "climate",
 	"images": {
@@ -39,7 +40,8 @@
 			},
 			"pair": [
 				{
-					"id": "start"
+					"id": "login_oauth2",
+					"template": "login_oauth2"
 				},
 				{
 					"id": "list_devices",
@@ -125,8 +127,5 @@
 				]
 			}
 		]
-	},
-	"dependencies": {
-		"request": "*"
 	}
 }
